--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title>Harwinderjit Singh</title>
 </head>
 <body>
-  <h1>Welcome to my page</h1>
+  <h1>Heading one</h1>
+  <h2>Heading two</h2>
+  <h3>Heading three</h3>
 </body>
 </html>
