--- a/index.html
+++ b/index.html
@@ -1,41 +1,11 @@
 <html>
 <head>
 <title>Harwinderjit Singh</title>
-<style>
-  .dec{
-    padding:10px; border:4px solid blue;
-  }
-</style>
+
 </head>
 <body>
   <h1 class="dec">
-    Heading one
+    Comming Soon
   </h1>
-  <p class="dec">hello paragraph</p>
-  <div class="dec">
-    <table border=2 cellpadding="10" cellspacing="1">
-        <tr>
-          <th colspan="2">Name</th>
-          <th>rollno</th>
-        </tr>
-        <tr>
-          <td rowspan="2">Man</td>
-          <td>MCOM</td>
-          <td>1001</td>
-        </tr>
-        <tr>
-          <td>Mani</td>
-          <td>MCOM</td>
-          <td>1002</td>
-        </tr>
-    </table>
-    <form method="POST">
-      <div><input type="text" name="name" value="email.com"/>
-      </div>
-      <div><input type="file" name="pass"/></div>
-      <div><input type="submit" value="done"/></div>
-    </form>
-    <img src>
-  </div>
 </body>
 </html>
